--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreen.SplashScreen" android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".ResultResturantActivity"></activity>
+        <activity
+            android:name=".SplashScreen.SplashScreen"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,13 +39,14 @@
         <activity
             android:name=".FindResturantActivity"
             android:parentActivityName=".MainActivity" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBYn_iTpYbpDv54iq_awa0N6LUP0m53jYQ"/>
+            android:value="AIzaSyBYn_iTpYbpDv54iq_awa0N6LUP0m53jYQ" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
