--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultResturantActivity"></activity>
+        <activity android:name=".ResultResturantActivity" android:parentActivityName=".CustomizeYourDateActiviy">
+
+        </activity>
+
         <activity
             android:name=".SplashScreen.SplashScreen"
             android:theme="@style/Theme.AppCompat.NoActionBar">
